Release 1.1.0 (#55)
* Add scripts to package.json

* Run npm run generate:server:edge

* Finalize update
